--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./base/base.scss";
 
 @import "./components/button.scss";
+@import "./components/slider.scss";
 
 
 @import "./layout/header.scss";
