--- a/src/index.css
+++ b/src/index.css
@@ -354,6 +354,77 @@ template {
   box-shadow: 10px 5px 5px #A0D9D9;
 }
 
+.slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+.slider__container {
+  position: relative;
+  width: 100%;
+  height: 415px;
+  border-radius: 25px;
+  overflow: hidden;
+}
+.slider__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: scale-down;
+  object-fit: scale-down;
+}
+.slider__leftArrow {
+  position: absolute;
+  top: 40%;
+  left: 23px;
+  cursor: pointer;
+}
+.slider__rightArrow {
+  position: absolute;
+  top: 40%;
+  right: 23px;
+  cursor: pointer;
+}
+.slider__hiddenArrow {
+  display: none;
+}
+.slider__nbPhoto {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  font-size: 18px;
+  color: White;
+}
+.slider__title {
+  color: white;
+}
+
+@media screen and (max-width: 630px) {
+  .slider__container {
+    height: 255px;
+    min-width: 335px;
+    border-radius: 10px;
+  }
+  .slider__leftArrow {
+    height: 19.8px;
+    width: 11.67px;
+    top: 45%;
+    left: 6px;
+  }
+  .slider__rightArrow {
+    height: 19.8px;
+    width: 11.67px;
+    top: 45%;
+    right: 6px;
+  }
+  .slider__nbPhoto {
+    display: none;
+  }
+  .slider__title {
+    font-size: small;
+  }
+}
 .header {
   height: 100px;
   display: flex;
@@ -393,6 +464,10 @@ template {
 
 .video {
   display: flex;
+}
+
+.home {
+  height: 100%;
 }
 
 /*# sourceMappingURL=index.css.map */
