--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,10 +4,11 @@
 
 @import "./components/button.scss";
 @import "./components/slider.scss";
+@import "./components/navbar.scss";
 
 
 @import "./layout/header.scss";
-@import "./layout/footer.scss";
+@import "./layout/headerLeft.scss";
 
 @import "./pages/cover.scss";
 @import "./pages/home.scss";
