add Contact page with form

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import "./components/button.scss";
 @import "./components/slider.scss";
 @import "./components/navbar.scss";
+@import "./components/form.scss";
+@import "./components/label.scss";
 
 
 @import "./layout/header.scss";
@@ -12,3 +14,5 @@
 
 @import "./pages/cover.scss";
 @import "./pages/home.scss";
+@import "./pages/contact.scss";
+@import "./pages/maps.scss";
