--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -1,7 +1,12 @@
 .button {
-    width: 80px;
+    width: 100px;
     height: 30px;
     margin: 20px;
     border-radius: 25px;
     box-shadow: 10px 5px 5px $Color2;
+
+}
+
+.button:hover {
+    box-shadow: 10px 5px 5px $Color3;
 }
