feat pages: add homePage

--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,3 +1,49 @@
 .home {
+    margin-left: 100px;
     height: 100%;
+
+    &__description {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 50px;
+
+        &__text {
+            width: 40%;
+            margin-top: 50px;
+            font-size: large;
+            font-weight: bold;
+            text-align: justify;
+            line-height: 50px;
+        }
+    }
+
+    &__hebergement {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+        &__title {
+            font-size: xx-large;
+        }
+    }
+
+
+}
+
+.bungalow {
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    margin-bottom: 100px;
+
+    &__card {
+        display: flex;
+        justify-content: center;
+
+        &__text {
+            padding-left: 1%;
+            padding-right: 5%;
+        }
+    }
 }
