--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -1,5 +1,6 @@
 .button {
-    width: 100px;
+    width: auto;
+    min-width: 100px;
     height: 30px;
     margin: 20px;
     border-radius: 25px;
