feat component: add form / navbar feat pages: add gallery /contact

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,9 @@
 @import "./components/navbar.scss";
 @import "./components/form.scss";
 @import "./components/label.scss";
+@import "./components/banner.scss";
+@import "./components/card.scss";
+@import "./components/collapse.scss";
 
 
 @import "./layout/header.scss";
@@ -14,5 +17,6 @@
 
 @import "./pages/cover.scss";
 @import "./pages/home.scss";
+@import "./pages/hebergement.scss";
 @import "./pages/contact.scss";
 @import "./pages/maps.scss";
