--- a/sass/pages/contact.scss
+++ b/sass/pages/contact.scss
@@ -2,6 +2,6 @@
     display: flex;
     height: 100%;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 
 }
