--- a/src/index.css
+++ b/src/index.css
@@ -351,7 +351,8 @@ main {
 }
 
 .button {
-  width: 100px;
+  width: auto;
+  min-width: 100px;
   height: 30px;
   margin: 20px;
   border-radius: 25px;
@@ -371,25 +372,27 @@ main {
 }
 .slider__container {
   position: relative;
-  width: 100%;
+  width: 500px;
   height: 415px;
   border-radius: 25px;
   overflow: hidden;
 }
 .slider__image {
-  width: 100%;
+  width: 500px;
   height: 100%;
-  -o-object-fit: scale-down;
-  object-fit: scale-down;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 .slider__leftArrow {
   position: absolute;
+  width: 25px;
   top: 40%;
   left: 23px;
   cursor: pointer;
 }
 .slider__rightArrow {
   position: absolute;
+  width: 25px;
   top: 40%;
   right: 23px;
   cursor: pointer;
@@ -469,10 +472,93 @@ main {
 }
 
 .errorMessage {
-  padding-top: 5px;
+  padding-left: 10%;
+  margin-top: -10%;
   color: red;
 }
 
+.banner__img {
+  opacity: 0.7;
+  -o-object-fit: fill;
+  object-fit: fill;
+  height: 100px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.card {
+  width: 250px;
+  height: 250px;
+  margin-top: 50px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.card__img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.card__title {
+  display: flex;
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  align-items: flex-end;
+}
+
+.collapse {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.collapse__title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding-left: 5%;
+  padding-right: 2%;
+  background-color: #A0D9D9;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.collapse__title__text {
+  font-weight: 200;
+}
+.collapse__description {
+  padding-top: 3%;
+  padding-left: 5%;
+  padding-right: 2%;
+  background-color: #A0D9D9;
+  list-style-type: none;
+  font-size: large;
+  border-radius: 5px;
+  height: 100%;
+}
+
+@media screen and (max-width: 630px) {
+  .collapse {
+    height: auto;
+    width: 100%;
+    margin-bottom: 20px;
+    border-radius: 5px;
+  }
+  .collapse__title {
+    height: 30px;
+  }
+  .collapse__title__arrowUp {
+    height: 8.96px;
+    width: 15.2px;
+  }
+  .collapse__title__arrowDown {
+    height: 8.96px;
+    width: 15.2px;
+  }
+}
 .header {
   height: 100px;
   display: flex;
@@ -504,6 +590,7 @@ main {
   padding: 0;
   position: fixed;
   background-color: black;
+  top: 0;
 }
 
 .cover {
@@ -520,14 +607,77 @@ main {
 }
 
 .home {
+  margin-left: 100px;
   height: 100%;
+}
+.home__description {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+.home__description__text {
+  width: 40%;
+  margin-top: 50px;
+  font-size: large;
+  font-weight: bold;
+  text-align: justify;
+  line-height: 50px;
+}
+.home__hebergement {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.home__hebergement__title {
+  font-size: xx-large;
+}
+
+.bungalow {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin-bottom: 100px;
+}
+.bungalow__card {
+  display: flex;
+  justify-content: center;
+}
+.bungalow__card__text {
+  padding-left: 1%;
+  padding-right: 5%;
+}
+
+.hebergement {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+}
+.hebergement__description {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 80px;
+  margin-top: 40px;
+  width: 100%;
+}
+.hebergement__description__text {
+  width: 40%;
+  text-align: justify;
+  margin-left: 20px;
+  font-weight: 200;
+  line-height: 40px;
+}
+.hebergement__equipement {
+  width: 40%;
+  min-width: 200px;
 }
 
 .contact {
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .maps {
