--- a/src/index.css
+++ b/src/index.css
@@ -668,9 +668,22 @@ main {
   font-weight: 200;
   line-height: 40px;
 }
+.hebergement__details {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
 .hebergement__equipement {
-  width: 40%;
+  width: 300px;
   min-width: 200px;
+}
+.hebergement__tarifs {
+  width: 300px;
+  text-align: center;
+  background-color: #A0D9D9;
+}
+.hebergement__tarifs__detail {
+  padding: 5px;
 }
 
 .contact {
