--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -8,5 +8,11 @@
 }
 
 main {
-    margin-left: 100px;
+    height: 100%;
+}
+
+@media screen and (max-width: 700px) {
+    main {
+        margin-left: 0;
+    }
 }
