--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -4,6 +4,10 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+
+    &__burger {
+        display: none;
+    }
 }
 
 .link {
@@ -11,4 +15,60 @@
     text-decoration: none;
     text-align: center;
     margin-bottom: 40%;
+}
+
+@media screen and (max-width: 700px) {
+
+    .navbar {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+        position: fixed;
+        width: 100%;
+        background-color: black;
+        z-index: 1;
+        right: 0;
+        top: 80px;
+
+        &__burger {
+            display: block;
+            position: absolute;
+            right: 10px;
+            width: 40px;
+            height: 40px;
+            background: transparent;
+            border: none;
+            color: white;
+
+        }
+
+        &__burger:hover {
+            cursor: pointer;
+        }
+    }
+
+    .link {
+        margin-bottom: 20%;
+        padding-right: 10px;
+        width: 90%;
+    }
+
+    .burgerBar {
+        @include bar
+    }
+
+    .burgerBar::before {
+        @include bar;
+        @include bar2;
+        transform: translateY(-12px);
+    }
+
+
+
+    .burgerBar::after {
+        @include bar;
+        @include bar2;
+        transform: translateY(12px);
+    }
 }
