--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+
 
     &__container {
         position: relative;
@@ -58,8 +58,13 @@
     .slider {
         &__container {
             height: 255px;
+            width: 100%;
             min-width: 335px;
             border-radius: 10px;
+        }
+
+        &__image {
+            width: 100%;
         }
 
         &__leftArrow {
@@ -82,6 +87,7 @@
 
         &__title {
             font-size: small;
+            text-align: center;
         }
     }
 }
