--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -18,4 +18,23 @@
             height: 100%;
         }
     }
+
+    &__menu {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 700px) {
+
+    .header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+
+        &__menu {
+            display: flex;
+            align-items: center;
+        }
+    }
 }
