--- a/sass/pages/dispo.scss
+++ b/sass/pages/dispo.scss
@@ -1,7 +1,17 @@
 .calendar {
     height: 100%;
-    margin-left: 120px;
+    margin-left: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width: 700px) {
+    .calendar {
+        @include marginPhone
+    }
+
+    iframe {
+        width: 90%;
+    }
 }
