--- a/src/index.css
+++ b/src/index.css
@@ -347,9 +347,14 @@ template {
 }
 
 main {
-  margin-left: 100px;
+  height: 100%;
 }
 
+@media screen and (max-width: 700px) {
+  main {
+    margin-left: 0;
+  }
+}
 .button {
   width: auto;
   min-width: 100px;
@@ -368,7 +373,6 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100%;
 }
 .slider__container {
   position: relative;
@@ -414,8 +418,12 @@ main {
 @media screen and (max-width: 630px) {
   .slider__container {
     height: 255px;
+    width: 100%;
     min-width: 335px;
     border-radius: 10px;
+  }
+  .slider__image {
+    width: 100%;
   }
   .slider__leftArrow {
     height: 19.8px;
@@ -434,6 +442,7 @@ main {
   }
   .slider__title {
     font-size: small;
+    text-align: center;
   }
 }
 .navbar {
@@ -443,6 +452,9 @@ main {
   justify-content: center;
   height: 100%;
 }
+.navbar__burger {
+  display: none;
+}
 
 .link {
   color: white;
@@ -451,6 +463,70 @@ main {
   margin-bottom: 40%;
 }
 
+@media screen and (max-width: 700px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    position: fixed;
+    width: 100%;
+    background-color: black;
+    z-index: 1;
+    right: 0;
+    top: 80px;
+  }
+  .navbar__burger {
+    display: block;
+    position: absolute;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: none;
+    color: white;
+  }
+  .navbar__burger:hover {
+    cursor: pointer;
+  }
+  .link {
+    margin-bottom: 20%;
+    padding-right: 10px;
+    width: 90%;
+  }
+  .burgerBar {
+    display: block;
+    width: 40px;
+    height: 3px;
+    position: relative;
+    border-radius: 3px;
+    background: white;
+  }
+  .burgerBar::before {
+    display: block;
+    width: 40px;
+    height: 3px;
+    position: relative;
+    border-radius: 3px;
+    background: white;
+    content: "";
+    position: absolute;
+    left: 0;
+    transform: translateY(-12px);
+  }
+  .burgerBar::after {
+    display: block;
+    width: 40px;
+    height: 3px;
+    position: relative;
+    border-radius: 3px;
+    background: white;
+    content: "";
+    position: absolute;
+    left: 0;
+    transform: translateY(12px);
+  }
+}
 #form {
   display: flex;
   flex-direction: column;
@@ -578,7 +654,22 @@ main {
   width: 100%;
   height: 100%;
 }
+.header__menu {
+  display: none;
+}
 
+@media screen and (max-width: 700px) {
+  .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+  .header__menu {
+    display: flex;
+    align-items: center;
+  }
+}
 .headerLeft {
   position: absolute;
   display: flex;
@@ -593,22 +684,33 @@ main {
   top: 0;
 }
 
+@media screen and (max-width: 700px) {
+  .headerLeft {
+    display: none;
+  }
+}
 .cover {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   flex-direction: column;
   background-color: #45858C;
   padding: 5%;
+  margin-left: 0;
+  height: 100%;
 }
 
 .video {
   display: flex;
 }
 
+@media screen and (max-width: 7000px) {
+  .cover {
+    margin-top: 100px;
+  }
+}
 .home {
   margin-left: 100px;
-  height: 100%;
 }
 .home__description {
   display: flex;
@@ -622,6 +724,8 @@ main {
   font-weight: bold;
   text-align: justify;
   line-height: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .home__hebergement {
   display: flex;
@@ -639,6 +743,10 @@ main {
   width: 80%;
   margin-bottom: 100px;
 }
+.bungalow__title {
+  text-align: center;
+  margin-bottom: 0;
+}
 .bungalow__card {
   display: flex;
   justify-content: center;
@@ -648,11 +756,36 @@ main {
   padding-right: 5%;
 }
 
+@media screen and (max-width: 900px) {
+  .home {
+    margin-top: 100px;
+  }
+  .home__description {
+    flex-direction: column;
+    align-items: center;
+  }
+  .home__description__text {
+    width: 80%;
+    margin-top: 10px;
+    line-height: 30px;
+  }
+  .bungalow {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 700px) {
+  .home {
+    margin-left: 0;
+    margin-top: 100px;
+  }
+}
 .hebergement {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 30px;
+  margin-left: 130px;
 }
 .hebergement__description {
   display: flex;
@@ -680,32 +813,118 @@ main {
 .hebergement__tarifs {
   width: 300px;
   text-align: center;
+  border-radius: 5px;
   background-color: #A0D9D9;
 }
 .hebergement__tarifs__detail {
   padding: 5px;
 }
 
+@media screen and (max-width: 900px) {
+  .hebergement {
+    margin-top: 100px;
+  }
+  .hebergement__description {
+    flex-direction: column;
+  }
+  .hebergement__description__text {
+    width: 100%;
+    margin: 0;
+  }
+  .hebergement__details {
+    flex-direction: column;
+    align-items: center;
+  }
+  .hebergement__tarifs {
+    margin-top: 30px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .hebergement {
+    margin-left: 0;
+    margin-top: 100px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .hebergement__description {
+    margin-top: 0;
+  }
+}
 .contact {
   display: flex;
   height: 100%;
   align-items: center;
   justify-content: center;
+  margin-left: 100px;
 }
 
+@media screen and (max-width: 700px) {
+  .contact {
+    margin-left: 0;
+    margin-top: 100px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+}
 .maps {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
+  margin-left: 100px;
 }
 
 .calendar {
   height: 100%;
-  margin-left: 120px;
+  margin-left: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media screen and (max-width: 700px) {
+  .calendar {
+    margin-left: 0;
+    margin-top: 100px;
+  }
+  iframe {
+    width: 90%;
+  }
+}
+.gallery {
+  display: flex;
+  justify-content: center;
+  margin-left: 100px;
+  margin-top: 50px;
+}
+
+@media screen and (max-width: 700px) {
+  .gallery {
+    margin-left: 0;
+    margin-top: 100px;
+    padding: 20px;
+  }
+}
+.error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 100px;
+  margin-right: 100px;
+  text-align: center;
+}
+.error__text {
+  font-size: 200px;
+  font-weight: 700;
+  line-height: 300px;
+}
+
+.redirection {
+  text-align: center;
+}
+.redirection__h4 {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=index.css.map */
