actions photos: update actions responsive: fix bug map

--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -26,6 +26,7 @@
         margin-top: 20px;
         position: fixed;
         width: 100%;
+        height: 90%;
         background-color: black;
         z-index: 1;
         right: 0;
@@ -49,7 +50,7 @@
     }
 
     .link {
-        margin-bottom: 20%;
+        margin-bottom: 15%;
         padding-right: 10px;
         width: 90%;
     }
@@ -71,4 +72,5 @@
         @include bar2;
         transform: translateY(12px);
     }
+
 }
