--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -4,7 +4,6 @@
     align-items: center;
     flex-direction: column;
 
-
     &__container {
         position: relative;
         width: 500px;
@@ -13,8 +12,23 @@
         overflow: hidden;
     }
 
+    &__containerGallery {
+        position: relative;
+        width: 700px;
+        height: 615px;
+        border-radius: 25px;
+        overflow: hidden;
+    }
+
+    &__imageGallery {
+        width: 100%;
+        height: 100%;
+        -o-object-fit: scale-down;
+        object-fit: scale-down;
+    }
+
     &__image {
-        width: 500px;
+        width: 700px;
         height: 100%;
         -o-object-fit: cover;
         object-fit: cover;
@@ -63,7 +77,18 @@
             border-radius: 10px;
         }
 
+        &__containerGallery {
+            height: 255px;
+            width: 100%;
+            min-width: 335px;
+            border-radius: 10px;
+        }
+
         &__image {
+            width: 100%;
+        }
+
+        &__imageGallery {
             width: 100%;
         }
 
