--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     background-color: black;
+    margin-left: 100px;
 
     &__logo {
         width: 100px;
@@ -31,6 +32,7 @@
         top: 0;
         width: 100%;
         z-index: 1;
+        margin-left: 0;
 
         &__menu {
             display: flex;
