feat global: add footer

--- a/src/index.css
+++ b/src/index.css
@@ -714,6 +714,38 @@ main {
     display: none;
   }
 }
+.footer {
+  bottom: 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100px;
+  background-color: black;
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.footer__title__text {
+  text-align: center;
+}
+.footer__social {
+  display: flex;
+  padding: 10px;
+}
+.footer__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  text-decoration: none;
+  margin-right: 8px;
+}
+.footer__link__img {
+  width: 20px;
+  padding-right: 2px;
+  border-radius: 5px;
+}
+
 .cover {
   display: flex;
   align-items: center;
