--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 
 @import "./layout/header.scss";
 @import "./layout/headerLeft.scss";
+@import "./layout/footer.scss";
 
 @import "./pages/cover.scss";
 @import "./pages/home.scss";
