--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -1,6 +1,16 @@
 #form {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    margin-right: 30px;
+    align-items: center;
+    width: 350px;
+}
+
+@media screen and (max-width: 700px) {
+    #form {
+        width: 100%;
+        align-items: center;
+        margin-right: 0;
+        width: 250px;
+
+    }
 }
