--- a/sass/pages/contact.scss
+++ b/sass/pages/contact.scss
@@ -1,17 +1,46 @@
 .contact {
-    display: flex;
     height: 100%;
-    align-items: center;
-    justify-content: center;
     margin-left: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &__form {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        width: 80%;
+    }
+
+    &__title {
+        font-size: 3em;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+
+    .contact {
+        &__title {
+            font-size: 2em;
+        }
+    }
 
 }
 
 @media screen and (max-width: 700px) {
     .contact {
         @include marginPhone;
+        margin-top: 30px;
         padding: 20px;
         display: flex;
         flex-direction: column;
+        justify-content: space-evenly;
+
+        &__form {
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
