--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "./components/banner.scss";
 @import "./components/card.scss";
 @import "./components/collapse.scss";
+@import "./components/reviewCard.scss";
 
 
 @import "./layout/header.scss";
@@ -24,4 +25,5 @@
 @import "./pages/maps.scss";
 @import "./pages/dispo.scss";
 @import "./pages/gallery.scss";
+@import "./pages/review.scss";
 @import "./pages/error.scss";
