--- a/src/index.css
+++ b/src/index.css
@@ -684,6 +684,24 @@ main {
     width: 15.2px;
   }
 }
+.reviewCard {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  border: solid gray 2px;
+  background-color: #A0D9D9;
+}
+.reviewCard__name {
+  text-align: center;
+}
+.reviewCard__detail {
+  margin: 0;
+  padding-left: 5px;
+}
+.reviewCard__text {
+  padding: 5px;
+}
+
 .header {
   height: 100px;
   display: flex;
@@ -1034,6 +1052,22 @@ main {
     padding: 20px;
   }
 }
+.review {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin-left: 100px;
+  padding: 10px;
+}
+.review__title {
+  text-align: center;
+  font-size: xx-large;
+}
+.review__list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .error {
   display: flex;
   flex-direction: column;
