--- a/sass/pages/review.scss
+++ b/sass/pages/review.scss
@@ -12,7 +12,14 @@
 
     &__list {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
 
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .review {
+        @include marginPhone
     }
 }
