--- a/src/index.css
+++ b/src/index.css
@@ -689,7 +689,10 @@ main {
   flex-direction: column;
   width: 250px;
   border: solid gray 2px;
+  border-radius: 20px;
+  margin-bottom: 15px;
   background-color: #A0D9D9;
+  box-shadow: 0px 4px 6px black;
 }
 .reviewCard__name {
   text-align: center;
@@ -1065,9 +1068,16 @@ main {
 }
 .review__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
+@media screen and (max-width: 700px) {
+  .review {
+    margin-left: 0;
+    margin-top: 100px;
+  }
+}
 .error {
   display: flex;
   flex-direction: column;
