--- a/sass/components/slider.scss
+++ b/sass/components/slider.scss
@@ -78,7 +78,7 @@
         }
 
         &__containerGallery {
-            height: 255px;
+            height: 500px;
             width: 100%;
             min-width: 335px;
             border-radius: 10px;
@@ -89,7 +89,9 @@
         }
 
         &__imageGallery {
-            width: 100%;
+            height: 100%;
+            -o-object-fit: cover;
+            object-fit: cover;
         }
 
         &__leftArrow {
