--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,7 @@ main {
     border-radius: 10px;
   }
   .slider__containerGallery {
-    height: 255px;
+    height: 500px;
     width: 100%;
     min-width: 335px;
     border-radius: 10px;
@@ -445,7 +445,9 @@ main {
     width: 100%;
   }
   .slider__imageGallery {
-    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
   .slider__leftArrow {
     height: 19.8px;
