--- a/sass/base/normalize.scss
+++ b/sass/base/normalize.scss
@@ -7,6 +7,7 @@
  */
 
 html {
+    font-family: 'Cormorant Garamond', serif;
     line-height: 1.15;
     /* 1 */
     -webkit-text-size-adjust: 100%;
