--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 html {
+  font-family: "Cormorant Garamond", serif;
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
