upgrade css navBar collapse

--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -5,6 +5,8 @@
         display: flex;
         justify-content: space-around;
         margin-bottom: 50px;
+        padding-left: 10px;
+        padding-right: 10px;
 
         &__text {
             width: 40%;
