--- a/sass/pages/maps.scss
+++ b/sass/pages/maps.scss
@@ -6,6 +6,10 @@
     height: 100%;
     margin-left: 100px;
 
+    &__map {
+        margin-top: 20px;
+    }
+
     &__link {
         font-size: xx-large;
         color: black;
