--- a/sass/components/collapse.scss
+++ b/sass/components/collapse.scss
@@ -1,4 +1,5 @@
 .collapse {
+
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -14,6 +15,8 @@
         background-color: $Color2;
         cursor: pointer;
         border-radius: 5px;
+
+
 
         &__text {
             font-weight: 200;
@@ -31,6 +34,18 @@
         border-radius: 5px;
         height: 100%;
     }
+}
+
+.expanded {
+    overflow: hidden;
+    transition: height ease-in-out 0.9s;
+    height: 300px;
+}
+
+.hidden {
+    height: 0px;
+    overflow: hidden;
+    transition: height ease 0.9s;
 }
 
 @media screen and (max-width: 630px) {
