--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -8,14 +8,32 @@
     &__burger {
         display: none;
     }
+
+    &__link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 40px;
+        margin-bottom: 20px;
+        width: 90%;
+        border-radius: 20px;
+
+    }
+
+    &__link:hover,
+    &__link:focus {
+        font-size: large
+    }
+
 }
 
 .link {
     color: white;
     text-decoration: none;
     text-align: center;
-    margin-bottom: 40%;
+    padding: 5px;
 }
+
 
 @media screen and (max-width: 700px) {
 
