--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/normalize.scss";
 @import "./utils/variables.scss";
 @import "./utils/mixins.scss";
+@import "./utils/keyframes.scss";
 @import "./base/base.scss";
 
 @import "./components/button.scss";
