--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "./components/card.scss";
 @import "./components/collapse.scss";
 @import "./components/reviewCard.scss";
+@import "./components/shopCard.scss";
 
 
 @import "./layout/header.scss";
@@ -28,3 +29,4 @@
 @import "./pages/gallery.scss";
 @import "./pages/review.scss";
 @import "./pages/error.scss";
+@import "./pages/shop.scss";
