--- a/sass/pages/error.scss
+++ b/sass/pages/error.scss
@@ -23,3 +23,10 @@
         text-decoration: underline;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .error {
+        @include marginPhone;
+        padding: 20px;
+    }
+}
